@@ -18,6 +18,9 @@ import java.lang.annotation.Annotation;
 import java.lang.reflect.Method;
 import net.hasor.core.ApiBinder.Matcher;
 import net.hasor.core.Hasor;
+import org.more.util.ClassUtils;
+import org.more.util.MatchUtils;
+import org.more.util.MatchUtils.MatchTypeEnum;
 /**
  * 
  * @version : 2013-8-20
@@ -32,7 +35,6 @@ public class AopMatchers {
     /** 匹配任意类型*/
     public static Matcher<Class<?>> anyClass() {
         return new Matcher<Class<?>>() {
-            @Override
             public boolean matches(final Class<?> t) {
                 return true;
             }
@@ -41,7 +43,6 @@ public class AopMatchers {
     /** 匹配任意方法*/
     public static Matcher<Method> anyMethod() {
         return new Matcher<Method>() {
-            @Override
             public boolean matches(final Method t) {
                 return true;
             }
@@ -49,57 +50,93 @@ public class AopMatchers {
     }
     /** 在类型中匹配注解 */
     public static Matcher<Class<?>> annotatedWithClass(final Class<? extends Annotation> annotationType) {
-        return new ClassMatcherAnnotationType(annotationType);
+        return new ClassAnnotationOf(annotationType);
     }
     /** 在方法中匹配注解 */
     public static Matcher<Method> annotatedWithMethod(final Class<? extends Annotation> annotationType) {
-        return new MethodMatcherAnnotationType(annotationType);
+        return new MethodAnnotationOf(annotationType);
     }
     /** 返回一个匹配器，匹配给定类型的子类（或实现了的接口） */
     public static Matcher<Class<?>> subClassesOf(final Class<?> superclass) {
-        return new SubclassesOf(superclass);
-    }
-    /**将表达式解析为<code>Matcher&lt;Class&gt;</code>。*/
-    public static Matcher<Class<?>> expressionClass(final String matcherExpression) {
-        throw new UnsupportedOperationException();//TODO　暂不支持
+        return new SubClassesOf(superclass);
     }
     /**将表达式解析为<code>Matcher&lt;Method&gt;</code>。
-     * 格式为：<code>&lt;返回值&gt;&nbsp;&lt;类名&gt;.&lt;方法名&gt;(&lt;参数签名列表&gt;)</code>*/
+     * 格式为：<code>&lt;包名&gt;.&lt;类名&gt;</code>，可以使用通配符。*/
+    public static Matcher<Class<?>> expressionClass(final String matcherExpression) {
+        return new ClassOf(MatchTypeEnum.Wild, matcherExpression);
+    }
+    /**
+     * 使用表达式配置Aop。
+     * <p>例：<pre>格式：&lt;返回值&gt;&nbsp;&lt;类名&gt;.&lt;方法名&gt;(&lt;参数签名列表&gt;)
+     *  * *.*()                  匹配：任意无参方法
+     *  * *.*(*)                 匹配：任意方法
+     *  * *.add*(*)              匹配：任意add开头的方法
+     *  * *.add*(*,*)            匹配：任意add开头并且具有两个参数的方法。
+     *  * net.test.hasor.*(*)    匹配：包“net.test.hasor”下的任意类，任意方法。
+     *  * net.test.hasor.add*(*) 匹配：包“net.test.hasor”下的任意类，任意add开头的方法。
+     *  java.lang.String *.*(*)  匹配：任意返回值为String类型的方法。
+     * </pre>
+     * @param matcherExpression 格式为“<code>&lt;返回值&gt;&nbsp;&lt;类名&gt;.&lt;方法名&gt;(&lt;参数签名列表&gt;)</code>”
+     */
     public static Matcher<Method> expressionMethod(final String matcherExpression) {
-        throw new UnsupportedOperationException();//TODO　暂不支持
-    }//
-     //
-     //
+        return new MethodOf(matcherExpression);
+    }
+    //
+    //
+    //
+    //
+    //
+    /**匹配方法*/
+    private static class MethodOf implements Matcher<Method> {
+        private final String matcherExpression;
+        public MethodOf(String matcherExpression) {
+            this.matcherExpression = matcherExpression;
+        }
+        public boolean matches(Method target) {
+            String methodStr = ClassUtils.getDescNameWithOutModifiers(target);
+            return MatchUtils.wildToRegex(matcherExpression, methodStr, MatchTypeEnum.Wild);
+        }
+    }
+    //
+    /**匹配类名*/
+    private static class ClassOf implements Matcher<Class<?>> {
+        private final MatchTypeEnum matchTypeEnum;
+        private final String        matcherExpression;
+        public ClassOf(MatchTypeEnum matchTypeEnum, String matcherExpression) {
+            this.matchTypeEnum = matchTypeEnum;
+            this.matcherExpression = matcherExpression;
+        }
+        public boolean matches(Class<?> target) {
+            return MatchUtils.wildToRegex(matcherExpression, target.getName(), this.matchTypeEnum);
+        }
+    }
+    //
     /**匹配子类*/
-    private static class SubclassesOf implements Matcher<Class<?>> {
+    private static class SubClassesOf implements Matcher<Class<?>> {
         private final Class<?> superclass;
-        public SubclassesOf(final Class<?> superclass) {
+        public SubClassesOf(final Class<?> superclass) {
             this.superclass = Hasor.assertIsNotNull(superclass, "superclass");
         }
-        @Override
         public boolean matches(final Class<?> subclass) {
             return this.superclass.isAssignableFrom(subclass);
         }
-        @Override
         public boolean equals(final Object other) {
-            return other instanceof SubclassesOf && ((SubclassesOf) other).superclass.equals(this.superclass);
+            return other instanceof SubClassesOf && ((SubClassesOf) other).superclass.equals(this.superclass);
         }
-        @Override
         public int hashCode() {
             return 37 * this.superclass.hashCode();
         }
-        @Override
         public String toString() {
-            return "subclassesOf(" + this.superclass.getSimpleName() + ".class)";
+            return "SubClassesOf(" + this.superclass.getSimpleName() + ".class)";
         }
     }
-    /**负责检测匹配。规则：只要类型上标记了某个注解。*/
-    private static class ClassMatcherAnnotationType implements Matcher<Class<?>> {
+    //
+    /**匹配类或类方法上标记的注解。*/
+    private static class ClassAnnotationOf implements Matcher<Class<?>> {
         private Class<? extends Annotation> annotationType = null;
-        public ClassMatcherAnnotationType(final Class<? extends Annotation> annotationType) {
+        public ClassAnnotationOf(final Class<? extends Annotation> annotationType) {
             this.annotationType = annotationType;
         }
-        @Override
         public boolean matches(final Class<?> matcherType) {
             if (matcherType.isAnnotationPresent(this.annotationType) == true) {
                 return true;
@@ -118,14 +155,23 @@ public class AopMatchers {
             }
             return false;
         }
+        public boolean equals(final Object other) {
+            return other instanceof ClassAnnotationOf && ((ClassAnnotationOf) other).annotationType.equals(this.annotationType);
+        }
+        public int hashCode() {
+            return 37 * this.annotationType.hashCode();
+        }
+        public String toString() {
+            return "ClassAnnotationOf(" + this.annotationType.getSimpleName() + ".class)";
+        }
     }
-    /**负责检测匹配。规则：只要方法上标记了某个注解。*/
-    private static class MethodMatcherAnnotationType implements Matcher<Method> {
+    //
+    /**匹配方法上的注解。*/
+    private static class MethodAnnotationOf implements Matcher<Method> {
         private Class<? extends Annotation> annotationType = null;
-        public MethodMatcherAnnotationType(final Class<? extends Annotation> annotationType) {
+        public MethodAnnotationOf(final Class<? extends Annotation> annotationType) {
             this.annotationType = annotationType;
         }
-        @Override
         public boolean matches(final Method matcherType) {
             if (matcherType.isAnnotationPresent(this.annotationType) == true) {
                 return true;
@@ -134,6 +180,15 @@ public class AopMatchers {
                 return true;
             }
             return false;
+        }
+        public boolean equals(final Object other) {
+            return other instanceof MethodAnnotationOf && ((MethodAnnotationOf) other).annotationType.equals(this.annotationType);
+        }
+        public int hashCode() {
+            return 37 * this.annotationType.hashCode();
+        }
+        public String toString() {
+            return "MethodAnnotationOf(" + this.annotationType.getSimpleName() + ".class)";
         }
     }
 }
